<resources>
    <string name="app_name">AndroidTask</string>
    <string name="main_activity_hello_world">Hello World!</string>
    <string name="main_activity_to_movie_detail">To Movie Detail</string>
    <string name="movie_details_back_to_main">Back</string>
    <string name="movie_details_age_limit">13+</string>
    <string name="movie_details_genre">Action, Adventure, Fantasy</string>
    <string name="movie_details_name_film">AVENGERS: END GAME</string>
    <string name="movie_details_reviews">125 REVIEWS</string>
    <string name="movie_details_storyline">Storyline</string>
    <string name="movie_details_description">After the devastating events of Avengers:
        Infinity War, the universe is in ruins. With the help of remaining allies,
        the Avengers assemble once more in order to reverse Thanos\' actions and restore
        balance to the universe.</string>
    <string name="movie_details_cast">Cast</string>
    <string name="movie_details_robert_downey_jr">Robert Downey Jr.</string>
    <string name="movie_details_chris_evans">Chris Evans</string>
    <string name="movie_details_chris_hemsworth">Chris Hemsworth</string>
    <string name="movie_details_mark_ruffalo">Mark Ruffalo</string>
    <string name="movies_list_name_list">Movies list</string>
    <string name="jenre_movies_list">Action, Adventure, Drama</string>
    <string name="movies_list_reviews">125 REVIEWS</string>
    <string name="name_film_movies_list">Avengers: End Game</string>
    <string name="duration_film_movies_list">137 MIN</string>
    <string name="age_limit_movies_list">14+</string>

    <string name="item_movie_list_empty_txt">Нету фильмов для загрузки</string>
</resources>