<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMovieDetailsBackground">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/top_background_movie_details"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/top_background"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_back_main_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="57dp"
            android:text="@string/movie_details_back_to_main"
            android:textSize="@dimen/movie_details_back_size"
            android:textColor="@color/colorMovieDetailsBackText"
            app:layout_constraintStart_toEndOf="@+id/iv_back"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/mavie_details_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_age_limit_movie_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="222dp"
            android:background="@drawable/movie_details_background_age_limit"
            android:paddingHorizontal="2dp"
            android:paddingVertical="4dp"
            android:layout_marginStart="16dp"
            android:text="@string/movie_details_age_limit"
            android:textColor="@color/colorMovieDetailsAllowedAgeText"
            android:textSize="@dimen/movie_details_allowed_age_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_films_move_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="254dp"
            android:text="@string/movie_details_name_film"
            android:textColor="@color/colorMovieDetailsFilmName"
            android:textSize="@dimen/movie_details_film_name_size"
            android:layout_marginHorizontal="16dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_jenre_movie_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_genre"
            android:textSize="@dimen/movie_details_film_genre_size"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/colorMovieDetailsFilmGenre"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_films_move_details"
            tools:layout_editor_absoluteX="146dp" />

        <ImageView
            android:id="@+id/iv_movies_list_star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/movie_details_star_full"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_jenre_movie_details" />

        <ImageView
            android:id="@+id/iv_movies_list_star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/movie_details_star_full"
            app:layout_constraintStart_toEndOf="@+id/iv_movies_list_star1"
            app:layout_constraintTop_toBottomOf="@+id/tv_jenre_movie_details" />

        <ImageView
            android:id="@+id/iv_movies_list_star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/movie_details_star_full"
            app:layout_constraintStart_toEndOf="@+id/iv_movies_list_star2"
            app:layout_constraintTop_toBottomOf="@+id/tv_jenre_movie_details" />

        <ImageView
            android:id="@+id/iv_movies_list_star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/movie_details_star_full"
            app:layout_constraintStart_toEndOf="@+id/iv_movies_list_star3"
            app:layout_constraintTop_toBottomOf="@+id/tv_jenre_movie_details" />

        <ImageView
            android:id="@+id/iv_movies_list_star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/movie_details_star_empty"
            app:layout_constraintStart_toEndOf="@+id/iv_movies_list_star4"
            app:layout_constraintTop_toBottomOf="@+id/tv_jenre_movie_details" />

        <TextView
            android:id="@+id/reviews_movie_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/movie_details_reviews"
            android:textColor="@color/colorMovieDetailsReviewsCounter"
            android:textStyle="bold"
            android:textSize="@dimen/movie_details_reviews_size"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_movies_list_star5"
            app:layout_constraintStart_toEndOf="@+id/iv_movies_list_star5"
            app:layout_constraintTop_toBottomOf="@+id/tv_jenre_movie_details" />

        <TextView
            android:id="@+id/storyline_movie_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:text="@string/movie_details_storyline"
            android:textColor="@color/colorMovieDetailsStorylineTitle"
            android:textStyle="bold"
            android:textSize="@dimen/movie_details_storyline_title_size"
            app:layout_constraintTop_toBottomOf="@+id/iv_movies_list_star5"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/descripsion_movie_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="@dimen/movie_details_storyline_text_size"
            android:text="@string/movie_details_description"
            android:textColor="@color/colorMovieDetailsStorylineText"
            app:layout_constraintTop_toBottomOf="@id/storyline_movie_details"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/cast_movie_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:text="@string/movie_details_cast"
            android:textSize="@dimen/movie_details_cast_title_size"
            android:textColor="@color/colorMovieDetailsCastTitle"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/descripsion_movie_details"
            tools:layout_editor_absoluteX="16dp" />


        <ImageView
            android:id="@+id/iv_1_movie_details"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/robert"
            android:scaleType="centerCrop"
            android:layout_marginStart="16dp"
            android:background="@drawable/movie_details_background_top"
            app:layout_constraintEnd_toStartOf="@+id/iv_2_movie_details"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/cast_movie_details"/>

        <ImageView
            android:id="@+id/iv_2_movie_details"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cris"
            android:layout_marginTop="7dp"
            android:background="@drawable/movie_details_background_top"
            app:layout_constraintEnd_toStartOf="@+id/iv_3_movie_details"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_1_movie_details"
            app:layout_constraintTop_toBottomOf="@+id/cast_movie_details" />

        <ImageView
            android:id="@+id/iv_3_movie_details"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mark"
            android:layout_marginTop="7dp"
            android:background="@drawable/movie_details_background_top"
            app:layout_constraintEnd_toStartOf="@+id/iv_4_movie_details"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_2_movie_details"
            app:layout_constraintTop_toBottomOf="@id/cast_movie_details" />

        <ImageView
            android:id="@+id/iv_4_movie_details"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/cris_h"
            android:background="@drawable/movie_details_background_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_3_movie_details"
            app:layout_constraintTop_toBottomOf="@+id/cast_movie_details" />


        <TextView
            android:id="@+id/tv_actors_1_movie_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_robert_downey_jr"
            android:textColor="@color/colorMovieDetailsActorName"
            android:textStyle="bold"
            android:textSize="@dimen/movie_details_actor_name_size"
            app:layout_constraintEnd_toEndOf="@+id/iv_1_movie_details"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/iv_1_movie_details"
            app:layout_constraintTop_toBottomOf="@+id/iv_1_movie_details" />

        <TextView
            android:id="@+id/tv_actors_2_movie_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_chris_evans"
            android:textColor="@color/colorMovieDetailsActorName"
            android:textStyle="bold"
            android:textSize="@dimen/movie_details_actor_name_size"
            app:layout_constraintEnd_toEndOf="@+id/iv_2_movie_details"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/iv_2_movie_details"
            app:layout_constraintTop_toBottomOf="@id/iv_2_movie_details" />

        <TextView
            android:id="@+id/tv_actors_3_movie_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_mark_ruffalo"
            android:textColor="@color/colorMovieDetailsActorName"
            android:textStyle="bold"
            android:textSize="@dimen/movie_details_actor_name_size"
            app:layout_constraintEnd_toEndOf="@+id/iv_3_movie_details"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/iv_3_movie_details"
            app:layout_constraintTop_toBottomOf="@+id/iv_3_movie_details" />

        <TextView
            android:id="@+id/tv_actors_4_movie_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_chris_hemsworth"
            android:textColor="@color/colorMovieDetailsActorName"
            android:textStyle="bold"
            android:textSize="@dimen/movie_details_actor_name_size"
            app:layout_constraintEnd_toEndOf="@+id/iv_4_movie_details"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/iv_4_movie_details"
            app:layout_constraintTop_toBottomOf="@id/iv_4_movie_details" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="298dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
