<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMoviesListBackground">

    <ImageView
        android:id="@+id/iv_circle_fragment_movie_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/movie_list_top_of_name_list"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name_list_fragment_movie_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_name_list_fragment_movie_list" />

    <TextView
        android:id="@+id/tv_name_list_fragment_movie_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movies_list_name_list"
        android:textColor="@color/colorMoviesListNameList"
        android:textSize="@dimen/movies_list_name_list_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_circle_fragment_movie_list"
        android:layout_marginStart="8dp"
        android:layout_marginTop="55dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_film_container"
        android:layout_width="170dp"
        android:layout_height="296dp"
        app:cardBackgroundColor="@color/colorMoviesListCardViewBackground"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_list_fragment_movie_list"
        android:layout_marginStart="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_film_fragment_movie_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/first_movie_list" />

            <TextView
                android:id="@+id/tv_age_limit_movies_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:paddingVertical="4dp"
                android:paddingHorizontal="2dp"
                android:background="@drawable/movies_list_background_age_limit"
                android:text="@string/age_limit_movies_list"
                android:textColor="@color/colorMoviesListAllowedAgeText"
                android:textSize="@dimen/movies_list_age_limit_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_favorite_movies_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/movies_list_favorite_empty"
                app:layout_constraintBottom_toBottomOf="@+id/tv_age_limit_movies_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_age_limit_movies_list" />

            <TextView
                android:id="@+id/tv_jenre_movies_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/jenre_movies_list"
                android:textColor="@color/colorMoviesListFilmGenre"
                android:textSize="@dimen/movies_list_genre_size"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_film_fragment_movie_list" />

            <ImageView
                android:id="@+id/iv_movies_list_star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/movies_list_star_full"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_jenre_movies_list" />

            <ImageView
                android:id="@+id/iv_movies_list_star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:src="@drawable/movies_list_star_full"
                app:layout_constraintStart_toEndOf="@+id/iv_movies_list_star1"
                app:layout_constraintTop_toBottomOf="@+id/tv_jenre_movies_list" />

            <ImageView
                android:id="@+id/iv_movies_list_star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:src="@drawable/movies_list_star_full"
                app:layout_constraintStart_toEndOf="@+id/iv_movies_list_star2"
                app:layout_constraintTop_toBottomOf="@+id/tv_jenre_movies_list" />

            <ImageView
                android:id="@+id/iv_movies_list_star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:src="@drawable/movies_list_star_full"
                app:layout_constraintStart_toEndOf="@+id/iv_movies_list_star3"
                app:layout_constraintTop_toBottomOf="@+id/tv_jenre_movies_list" />

            <ImageView
                android:id="@+id/iv_movies_list_star5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:src="@drawable/movies_list_star_empty"
                app:layout_constraintStart_toEndOf="@+id/iv_movies_list_star4"
                app:layout_constraintTop_toBottomOf="@+id/tv_jenre_movies_list" />

            <TextView
                android:id="@+id/tv_reviews_movies_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textStyle="bold"
                android:text="@string/movies_list_reviews"
                android:textColor="@color/colorMoviesListReviewsCounter"
                android:textSize="@dimen/movies_list_reviews_size"
                app:layout_constraintBottom_toBottomOf="@+id/iv_movies_list_star5"
                app:layout_constraintStart_toEndOf="@+id/iv_movies_list_star5"
                app:layout_constraintTop_toTopOf="@+id/iv_movies_list_star5" />

            <TextView
                android:id="@+id/tv_name_film_movies_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_film_movies_list"
                android:textColor="@color/colorMovieDetailsFilmName"
                android:textSize="@dimen/movies_list_name_film_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_reviews_movies_list" />

            <TextView
                android:id="@+id/tv_duration_film_movies_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duration_film_movies_list"
                android:textColor="@color/colorMoviesListFilmDuration"
                android:textSize="@dimen/movies_list_duration_film_size"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_film_movies_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>